tests/cases/errors/unsupported_type/main.sv
module Top;
  int m [string];
endmodule
